--- a/src/poly/basic/다형성.md
+++ b/src/poly/basic/다형성.md
@@ -52,3 +52,8 @@
 이런 오류는 IDE에서 즉시 확인할 수 있기 떄문에 안전하고 좋은 코드다.   
 반면에 런타임 오류는 이름 그대로 프로그램이 실행되고 있는 시점에 발생하는 오류다.  
 런타임 오류는 매우 안좋은 오류이다. 왜냐하면 보통 고객이 해당 프로그램을 실행하는 도중에 발생하기 떄문이다.   
+
+## 다형성과 메서드 오버라이딩   
+> 다형성을 이루는 또 하나의 중요한 핵심 이론은 바로바로 메서드 오버라이딩이다.  
+> 메서드 오버라이딩에서 꼭 기억해야 할 점은 **오버라이딩 된 메서드가 항상 우선권을 가진다는 점이다**   
+> 그래서 이름도 기존 기능을 덮어 새로운 기능을 재정의한다는 뜻의 오버라이딩이다.   
