인터페이스 - 다중 구현

--- a/src/poly/interface1/인터페이스.md
+++ b/src/poly/interface1/인터페이스.md
@@ -115,3 +115,17 @@ public abstract class AbstractAnimal {
 > 하지만 이것은 예외적으로 아주 특별한 경우에만 사용해야 한다.  
 > 자바9에서 등장한 인터페이스의 private 메서드도 마찬가지다   
 > 지금 학습 단계에서는 이 부분 고려 안해도 됨 뒤에서 따로 배움   
+
+## 인터페이스 - 다중 구현 
+자바가 다중 상속을 지원하지 않는 이유 
+자바는 다중 상속을 지원하지 않는다. 그래서 extends 대상은 하나만 선택할 수 있다. 
+부모를 하나만 선택할 수 있다는 뜻이다. 물론 부모가 또 부모를 가지는 것은 괜찮다. 
+
+만약 비행기와 자동차를 상속 받아서 하늘을 나는 자동차를 만든다고 가정해보자. 만약 그림과 같이 다중 상속을 사용하
+게 되면 AirplaneCar 입장에서 move()를 호출할 때 어떤 부모의 move()를 사용해야 할지 애매한 문제가 발생
+한다. 이것을 다이아몬드 문제라 한다. 그리고 다중 상속을 사용하면 클래스 계층 구조가 매우 복잡해지 수 있다. 이런
+문제점 때문에 자바는 클래스의 다중 상속을 허용하지 않는다. 대신에 인터페이스의 다중 구현을 허용하여 이러한 문제
+를 피한다.
+클래스는 앞서 설명한 이유로 다중 상속이 안되는데, 인터페이스의 다중 구현은 허용한 이유는 뭘까?
+인터페이스는 모두 추상 메서드로 이루어져 있기 때문이다.
+
