--- a/src/poly/좋은 객체 프로그래밍이란.md
+++ b/src/poly/좋은 객체 프로그래밍이란.md
@@ -1,4 +1,7 @@
 ## 좋은 객체 지향 프로그램이란?   
+>역할과 구현 나누는 것   
+역할은 인터페이스고 구현은 구현체다.  
+
 - 객체 지향 특징  
 1. 추상화  
 2. 캡슐화  
@@ -52,7 +55,7 @@
 ## 다형성의 본질 
 > 인터페이스를 구현한 객체 인스턴스를 실행 시점에 유연하게 변경할 수 있다.  
 다형성의 본질을 이해하려면 협력이라는 객체 사이의 관계에서 시작해야함   
-클라이언트를 변경하지 않고 서버의 구현 기능을 유연하게 변경할 수 있다.   
+### 클라이언트를 변경하지 않고 서버의 구현 기능을 유연하게 변경할 수 있다.   
 
 ## 역할과 분리  
 **정리**
